--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -15,12 +15,10 @@ tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
 tap "sonatype-nexus-community/nancy-tap"
 tap "weaveworks/tap"
-cask "adoptopenjdk8"
 cask "osxfuse"
 brew "ansible-cmdb"
 brew "gdbm"
 brew "xz"
-brew "python@3.8"
 brew "ansible-lint"
 brew "argyll-cms"
 brew "asciinema"
@@ -28,21 +26,22 @@ brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
 brew "awscli"
+brew "b3sum"
 brew "bash"
 brew "openjdk"
 brew "bfg"
 brew "brightness"
 brew "buildkit"
 brew "gettext"
+brew "python@3.8"
 brew "glib"
+brew "cassandra"
 brew "ccat"
 brew "cloc"
 brew "coreutils"
 brew "curl"
 brew "po4a"
 brew "dpkg"
-brew "harfbuzz"
-brew "ffmpeg"
 brew "filebeat"
 brew "findutils"
 brew "fzf"
@@ -56,6 +55,7 @@ brew "libksba"
 brew "gnupg"
 brew "go"
 brew "gptfdisk"
+brew "harfbuzz"
 brew "pango"
 brew "graphviz"
 brew "grep"
@@ -129,6 +129,7 @@ brew "golangci/tap/golangci-lint"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
 brew "sonatype-nexus-community/nancy-tap/nancy"
+cask "adoptopenjdk8"
 cask "android-platform-tools"
 cask "atom"
 cask "balenaetcher"
@@ -161,16 +162,19 @@ cask "logitech-gaming-software"
 cask "logitech-options"
 cask "logitech-unifying"
 cask "mattermost"
+cask "microsoft-auto-update"
 cask "microsoft-remote-desktop-beta"
 cask "mongodb-compass"
 cask "ngrok"
 cask "notion"
 cask "prusaslicer"
 cask "qbittorrent"
+cask "signal"
 cask "slack"
 cask "steam"
 cask "telegram"
 cask "thunderbird"
+cask "typora"
 cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
