--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,6 +3,7 @@ tap "buo/cask-upgrade"
 tap "clintmod/formulas"
 tap "derailed/k9s"
 tap "derailed/popeye"
+tap "fairwindsops/tap"
 tap "golangci/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
@@ -13,9 +14,9 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
+tap "mongodb/brew"
 tap "sonatype-nexus-community/nancy-tap"
 tap "weaveworks/tap"
-cask "osxfuse"
 brew "ansible-cmdb"
 brew "gdbm"
 brew "xz"
@@ -33,7 +34,6 @@ brew "bfg"
 brew "brightness"
 brew "buildkit"
 brew "gettext"
-brew "python@3.8"
 brew "glib"
 brew "cassandra"
 brew "ccat"
@@ -42,6 +42,8 @@ brew "coreutils"
 brew "curl"
 brew "po4a"
 brew "dpkg"
+brew "harfbuzz"
+brew "ffmpeg"
 brew "filebeat"
 brew "findutils"
 brew "fzf"
@@ -52,11 +54,11 @@ brew "gnu-sed"
 brew "gnu-time"
 brew "libgcrypt"
 brew "libksba"
-brew "gnupg"
+brew "gnupg", link: false
 brew "go"
 brew "gptfdisk"
-brew "harfbuzz"
 brew "pango"
+brew "python@3.8"
 brew "graphviz"
 brew "grep"
 brew "hadolint"
@@ -64,16 +66,18 @@ brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
+brew "shared-mime-info"
 brew "imagemagick"
 brew "john-jumbo"
 brew "jq"
 brew "kubernetes-cli"
+brew "krew"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
+brew "libfido2"
 brew "lzip"
 brew "lzop"
-brew "mackup"
 brew "maven"
 brew "mysql-client"
 brew "nano"
@@ -93,15 +97,20 @@ brew "pbzip2"
 brew "pigz"
 brew "plzip"
 brew "prometheus"
+brew "protobuf"
 brew "putty"
+brew "pv"
 brew "pwgen"
+brew "qpdf"
 brew "rack"
 brew "redis"
 brew "ripgrep"
 brew "rsync"
+brew "scrcpy"
 brew "shellcheck"
 brew "socat"
 brew "sonar-scanner"
+brew "sphinx-doc"
 brew "sshfs"
 brew "stunnel"
 brew "telnet"
@@ -119,18 +128,20 @@ brew "watch"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
-brew "yq"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
 brew "clintmod/formulas/macprefs"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
+brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
+brew "mongodb/brew/mongodb-database-tools"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk8"
 cask "android-platform-tools"
+cask "android-studio"
 cask "atom"
 cask "balenaetcher"
 cask "bettertouchtool"
@@ -140,6 +151,7 @@ cask "cd-to-iterm"
 cask "discord"
 cask "displaycal"
 cask "docker"
+cask "duet"
 cask "eloston-chromium"
 cask "firefox"
 cask "font-hack-nerd-font"
@@ -162,11 +174,13 @@ cask "logitech-gaming-software"
 cask "logitech-options"
 cask "logitech-unifying"
 cask "mattermost"
-cask "microsoft-auto-update"
 cask "microsoft-remote-desktop-beta"
 cask "mongodb-compass"
 cask "ngrok"
 cask "notion"
+cask "obs"
+cask "onyx"
+cask "osxfuse"
 cask "prusaslicer"
 cask "qbittorrent"
 cask "signal"
@@ -178,8 +192,7 @@ cask "typora"
 cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
+cask "zoom"
 cask "zoomus"
 mas "HyperDock", id: 449830122
-mas "Pages", id: 409201541
-mas "Paste", id: 967805235
 mas "Xcode", id: 497799835
