--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -111,7 +111,6 @@ brew "shellcheck"
 brew "socat"
 brew "sonar-scanner"
 brew "sphinx-doc"
-brew "sshfs"
 brew "stunnel"
 brew "telnet"
 brew "terraform"
@@ -121,7 +120,7 @@ brew "tldr"
 brew "tmux"
 brew "transcrypt"
 brew "tree"
-brew "unrar"
+brew "unar"
 brew "velero"
 brew "vim"
 brew "watch"
@@ -140,9 +139,11 @@ brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk8"
+cask "android-file-transfer"
 cask "android-platform-tools"
 cask "android-studio"
 cask "atom"
+cask "aws-vpn-client"
 cask "balenaetcher"
 cask "bettertouchtool"
 cask "bitwarden"
@@ -193,6 +194,5 @@ cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
 cask "zoom"
-cask "zoomus"
 mas "HyperDock", id: 449830122
 mas "Xcode", id: 497799835
