--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,3 +1,4 @@
+tap "aws/tap"
 tap "beeftornado/rmtree"
 tap "buo/cask-upgrade"
 tap "clintmod/formulas"
@@ -15,11 +16,12 @@ tap "homebrew/services"
 tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
 tap "mongodb/brew"
+tap "sl1pm4t/k2tf", "https://github.com/sl1pm4t/k2tf.git"
 tap "sonatype-nexus-community/nancy-tap"
 tap "weaveworks/tap"
-brew "ansible-cmdb"
 brew "gdbm"
 brew "xz"
+brew "ansible-cmdb"
 brew "ansible-lint"
 brew "argyll-cms"
 brew "asciinema"
@@ -33,8 +35,10 @@ brew "openjdk"
 brew "bfg"
 brew "brightness"
 brew "buildkit"
+brew "caf"
 brew "gettext"
 brew "glib"
+brew "cairo"
 brew "cassandra"
 brew "ccat"
 brew "cloc"
@@ -58,7 +62,6 @@ brew "gnupg", link: false
 brew "go"
 brew "gptfdisk"
 brew "pango"
-brew "python@3.8"
 brew "graphviz"
 brew "grep"
 brew "hadolint"
@@ -67,6 +70,7 @@ brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
 brew "shared-mime-info"
+brew "libheif"
 brew "imagemagick"
 brew "john-jumbo"
 brew "jq"
@@ -105,7 +109,9 @@ brew "qpdf"
 brew "rack"
 brew "redis"
 brew "ripgrep"
+brew "rpm"
 brew "rsync"
+brew "ruby"
 brew "scrcpy"
 brew "shellcheck"
 brew "socat"
@@ -127,7 +133,9 @@ brew "watch"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
+brew "yq"
 brew "zsh"
+brew "aws/tap/aws-sam-cli"
 brew "beeftornado/rmtree/brew-rmtree"
 brew "clintmod/formulas/macprefs"
 brew "derailed/k9s/k9s"
@@ -137,6 +145,7 @@ brew "golangci/tap/golangci-lint"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
+brew "sl1pm4t/k2tf/k2tf"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk8"
 cask "android-file-transfer"
@@ -191,8 +200,8 @@ cask "telegram"
 cask "thunderbird"
 cask "typora"
 cask "visual-studio-code"
+cask "vlc"
 cask "vnc-viewer"
 cask "xquartz"
 cask "zoom"
-mas "HyperDock", id: 449830122
 mas "Xcode", id: 497799835
