--- a/config.yaml
+++ b/config.yaml
@@ -14,10 +14,10 @@
     ~/.gitignore_global: git/gitignore_global
     ~/.nanorc: nano/nanorc
     ~/.ssh/config: ssh/config
-    ~/.vimrc: vim/vimrc
+    ~/.config/nvim/init.vim: vim/init.vim
     ~/.vim/bundle: vim/bundle
-    ~/.vim/autoload: vim/autoload
     ~/.mackup.cfg: mac/mackup.cfg
+    ~/.local/share/nvim/site/autoload: vim/autoload
 
 - shell:
   - description: oh-my-zsh
