--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,10 +1,7 @@
 tap "aws/tap"
-tap "beeftornado/rmtree"
 tap "buo/cask-upgrade"
-tap "clintmod/formulas"
 tap "derailed/k9s"
 tap "derailed/popeye"
-tap "fairwindsops/tap"
 tap "golangci/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
@@ -13,42 +10,24 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
-tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
-tap "mongodb/brew"
-tap "sl1pm4t/k2tf", "https://github.com/sl1pm4t/k2tf.git"
-tap "sonatype-nexus-community/nancy-tap"
-tap "weaveworks/tap"
 brew "gdbm"
 brew "xz"
-brew "ansible-cmdb"
-brew "ansible-lint"
 brew "argyll-cms"
-brew "asciinema"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
 brew "awscli"
-brew "b3sum"
 brew "bash"
 brew "openjdk"
 brew "bfg"
-brew "brightness"
-brew "buildkit"
-brew "caf"
 brew "gettext"
 brew "glib"
-brew "cairo"
-brew "cassandra"
 brew "ccat"
 brew "cloc"
 brew "coreutils"
 brew "curl"
-brew "po4a"
-brew "dpkg"
-brew "harfbuzz"
-brew "ffmpeg"
-brew "filebeat"
+brew "docker", link: false
 brew "findutils"
 brew "fzf"
 brew "gh"
@@ -56,152 +35,71 @@ brew "git"
 brew "git-lfs"
 brew "gnu-sed"
 brew "gnu-time"
-brew "libgcrypt"
-brew "libksba"
-brew "gnupg", link: false
 brew "go"
-brew "gptfdisk"
-brew "pango"
-brew "graphviz"
 brew "grep"
 brew "hadolint"
 brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
-brew "shared-mime-info"
-brew "libheif"
-brew "imagemagick"
-brew "john-jumbo"
 brew "jq"
 brew "kubernetes-cli"
 brew "krew"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
-brew "libfido2"
-brew "lzip"
-brew "lzop"
-brew "maven"
-brew "mysql-client"
 brew "nano"
 brew "ncdu"
 brew "neovim"
-brew "newt"
-brew "nmap"
 brew "node"
 brew "nvm"
 brew "octant"
 brew "openssh"
-brew "ossp-uuid"
-brew "p7zip"
-brew "packer"
-brew "pandoc"
-brew "pbzip2"
-brew "pigz"
-brew "plzip"
-brew "prometheus"
-brew "protobuf"
-brew "putty"
-brew "pv"
-brew "pwgen"
-brew "qpdf"
-brew "rack"
-brew "redis"
 brew "ripgrep"
-brew "rpm"
 brew "rsync"
-brew "ruby"
-brew "scrcpy"
 brew "shellcheck"
 brew "socat"
-brew "sonar-scanner"
-brew "sphinx-doc"
-brew "stunnel"
 brew "telnet"
-brew "terraform"
-brew "tflint"
 brew "tig"
 brew "tldr"
 brew "tmux"
 brew "transcrypt"
 brew "tree"
 brew "unar"
-brew "velero"
-brew "vim"
 brew "watch"
 brew "wget"
-brew "yarn"
-brew "youtube-dl"
 brew "yq"
 brew "zsh"
-brew "aws/tap/aws-sam-cli"
-brew "beeftornado/rmtree/brew-rmtree"
-brew "clintmod/formulas/macprefs"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
-brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
-brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "sl1pm4t/k2tf/k2tf"
-brew "sonatype-nexus-community/nancy-tap/nancy"
-cask "adoptopenjdk8"
-cask "android-file-transfer"
-cask "android-platform-tools"
-cask "android-studio"
 cask "atom"
-cask "aws-vpn-client"
-cask "balenaetcher"
-cask "bettertouchtool"
 cask "bitwarden"
-cask "calibre"
-cask "cd-to-iterm"
-cask "discord"
 cask "displaycal"
 cask "docker"
 cask "duet"
-cask "eloston-chromium"
 cask "firefox"
-cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "gpg-suite"
 cask "iina"
-cask "imageoptim"
 cask "insomnia"
 cask "iterm2"
-cask "jdownloader"
 cask "joplin"
 cask "keka"
-cask "kekadefaultapp"
-cask "keybase"
-cask "little-snitch"
-cask "logitech-camera-settings"
-cask "logitech-firmwareupdatetool"
-cask "logitech-gaming-software"
-cask "logitech-options"
-cask "logitech-unifying"
-cask "mattermost"
 cask "microsoft-remote-desktop-beta"
 cask "mongodb-compass"
 cask "ngrok"
-cask "notion"
-cask "obs"
-cask "onyx"
-cask "osxfuse"
-cask "prusaslicer"
-cask "qbittorrent"
+cask "kekaexternalhelper"
+cask "krita"
+cask "maccy"
+cask "openinterminal"
+cask "oversight"
+cask "rectangle"
 cask "signal"
 cask "slack"
-cask "steam"
-cask "telegram"
-cask "thunderbird"
-cask "typora"
+cask "sourcetree"
 cask "visual-studio-code"
-cask "vlc"
-cask "vnc-viewer"
-cask "xquartz"
-cask "zoom"
-mas "Xcode", id: 497799835
