--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -11,6 +11,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "mas-cli/tap"
+tap "warrensbox/tap"
 brew "gdbm"
 brew "xz"
 brew "argyll-cms"
@@ -21,10 +22,6 @@ brew "awscli"
 brew "bash"
 brew "openjdk"
 brew "bfg"
-brew "gettext"
-brew "glib"
-brew "ccat"
-brew "cloc"
 brew "coreutils"
 brew "curl"
 brew "docker", link: false
@@ -75,9 +72,11 @@ brew "derailed/popeye/popeye"
 brew "golangci/tap/golangci-lint"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
-brew "sl1pm4t/k2tf/k2tf"
+brew "warrensbox/tap/tfswitch"
+cask "adoptopenjdk"
 cask "atom"
 cask "bitwarden"
+cask "cyberduck"
 cask "displaycal"
 cask "docker"
 cask "duet"
