--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -11,10 +11,11 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "mas-cli/tap"
+tap "mongodb/brew"
 tap "warrensbox/tap"
+brew "argyll-cms"
 brew "gdbm"
 brew "xz"
-brew "argyll-cms"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
@@ -24,7 +25,6 @@ brew "openjdk"
 brew "bfg"
 brew "coreutils"
 brew "curl"
-brew "docker", link: false
 brew "findutils"
 brew "fzf"
 brew "gh"
@@ -39,6 +39,7 @@ brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
+brew "john-jumbo"
 brew "jq"
 brew "kubernetes-cli"
 brew "krew"
@@ -57,6 +58,7 @@ brew "rsync"
 brew "shellcheck"
 brew "socat"
 brew "telnet"
+brew "tfenv"
 brew "tig"
 brew "tldr"
 brew "tmux"
@@ -72,15 +74,17 @@ brew "derailed/popeye/popeye"
 brew "golangci/tap/golangci-lint"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
-brew "warrensbox/tap/tfswitch"
 cask "adoptopenjdk"
 cask "atom"
+cask "aws-vpn-client"
 cask "bitwarden"
 cask "cyberduck"
 cask "displaycal"
 cask "docker"
 cask "duet"
+cask "eloston-chromium"
 cask "firefox"
+cask "font-meslo-lg-nerd-font"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "gpg-suite"
@@ -89,16 +93,24 @@ cask "insomnia"
 cask "iterm2"
 cask "joplin"
 cask "keka"
-cask "microsoft-remote-desktop-beta"
-cask "mongodb-compass"
-cask "ngrok"
 cask "kekaexternalhelper"
 cask "krita"
-cask "maccy"
-cask "openinterminal"
+cask "little-snitch"
+cask "mattermost"
+cask "microsoft-auto-update"
+cask "microsoft-excel"
+cask "microsoft-outlook"
+cask "microsoft-powerpoint"
+cask "microsoft-remote-desktop"
+cask "microsoft-word"
+cask "mongodb-compass"
+cask "ngrok"
+cask "openineditor-lite"
+cask "openinterminal-lite"
 cask "oversight"
 cask "rectangle"
 cask "signal"
 cask "slack"
-cask "sourcetree"
+cask "thunderbird"
 cask "visual-studio-code"
+cask "zoom"
