--- a/ssh/config
+++ b/ssh/config
@@ -4,3 +4,9 @@ Host github.com
   Hostname ssh.github.com
   Port 443
   User git
+
+Host manager
+ HostName ap2manager.bislr.net
+ User manager
+ KeepAlive yes
+ ServerAliveInterval 60
