--- a/config.yaml
+++ b/config.yaml
@@ -61,4 +61,12 @@
 # can't clone repo if already exists
 - link:
     ~/.zshrc: zsh/zshrc
-    ~/.oh-my-zsh/custom: zsh/custom
+    ~/.oh-my-zsh/custom/:
+      glob: true
+      path: zsh/custom/*.zsh
+    ~/.oh-my-zsh/custom/plugins/:
+      glob: true
+      path: zsh/custom/plugins/*
+    ~/.oh-my-zsh/custom/themes/:
+      glob: true
+      path: zsh/custom/themes/*
