--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,8 @@
     ~/.local/share/nvim/site/autoload: vim/autoload
 
 - shell:
-  - description: oh-my-zsh
+  -
+    description: oh-my-zsh
     command: |
       if [ -d ~/.oh-my-zsh ]; then
         if [ ! -d ~/.oh-my-zsh/.git ]; then
@@ -29,31 +30,38 @@
       sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" || :
     stdout: true
     stdin: true
-  - description: install homebrew
     command: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  -
+    description: install homebrew
     stdout: true
     stdin: true
-  - description: install homebrew formulas
+  -
+    description: install homebrew formulas
     command: bash -c "cd mac && brew bundle"
     stdout: true
     stdin: true
-  - description: install pip3 modules
+  -
+    description: install pip3 modules
     command: bash -c "pip3 install -r pip/pip3-requirements.txt"
     stdout: true
     stdin: true
-  - description: install npm packages
+  -
+    description: install npm packages
     command: bash -c "< npm/packages.txt xargs npm install -g"
     stdout: true
     stdin: true
-  - description: install nano themes
+  -
+    description: install nano themes
     command: git-clone-idempotent https://github.com/scopatz/nanorc.git ~/.nano
     stdout: true
     stdin: true
-  - description: install atom packages
     command: apm install --production --packages-file atom/package-list.txt
+  -
+    description: install atom packages
     stdout: true
     stdin: true
-  - description: disable last login on new terminal session
+  -
+    description: disable last login on new terminal session
     command: touch ~/.hushlogin
     stdout: true
     stdin: true
