use onedark theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "vim/bundle/vim-visual-multi"]
 	path = vim/bundle/vim-visual-multi
 	url = https://github.com/mg979/vim-visual-multi.git
+[submodule "vim/bundle/onedark.vim"]
+	path = vim/bundle/onedark.vim
+	url = https://github.com/joshdick/onedark.vim.git
