--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,6 +3,7 @@ tap "buo/cask-upgrade"
 tap "derailed/k9s"
 tap "derailed/popeye"
 tap "golangci/tap"
+tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -53,6 +54,7 @@ brew "node"
 brew "nvm"
 brew "octant"
 brew "openssh"
+brew "packer"
 brew "ripgrep"
 brew "rsync"
 brew "shellcheck"
@@ -67,11 +69,13 @@ brew "tree"
 brew "unar"
 brew "watch"
 brew "wget"
+brew "yarn"
 brew "yq"
 brew "zsh"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
 brew "golangci/tap/golangci-lint"
+brew "hashicorp/tap/terraform-ls"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 cask "adoptopenjdk"
@@ -94,6 +98,7 @@ cask "iterm2"
 cask "joplin"
 cask "keka"
 cask "kekaexternalhelper"
+cask "keybase"
 cask "krita"
 cask "little-snitch"
 cask "mattermost"
@@ -104,6 +109,7 @@ cask "microsoft-powerpoint"
 cask "microsoft-remote-desktop"
 cask "microsoft-word"
 cask "mongodb-compass"
+cask "moonlight"
 cask "ngrok"
 cask "openineditor-lite"
 cask "openinterminal-lite"
