--- a/config.yaml
+++ b/config.yaml
@@ -132,6 +132,14 @@
       fi
     stdout: true
     stdin: true
+  -
+    description: Disable keyboard accents popup / enable key repeat
+    command: |
+      if [ "$(uname -s)" = "Darwin" ]; then
+        defaults write -g ApplePressAndHoldEnabled -bool false
+      fi
+    stdout: true
+    stdin: true
 
 # can't clone repo if already exists
 - link:
