--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -17,6 +17,7 @@ tap "warrensbox/tap"
 brew "argyll-cms"
 brew "gdbm"
 brew "xz"
+brew "python@3.9"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
@@ -25,6 +26,7 @@ brew "bash"
 brew "openjdk"
 brew "bfg"
 brew "coreutils"
+brew "openldap"
 brew "curl"
 brew "findutils"
 brew "fzf"
@@ -40,6 +42,7 @@ brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
+brew "imagemagick"
 brew "john-jumbo"
 brew "jq"
 brew "kubernetes-cli"
@@ -60,7 +63,9 @@ brew "rsync"
 brew "shellcheck"
 brew "socat"
 brew "telnet"
+brew "terraform-docs"
 brew "tfenv"
+brew "tflint"
 brew "tig"
 brew "tldr"
 brew "tmux"
@@ -114,6 +119,7 @@ cask "ngrok"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "oversight"
+cask "prusaslicer"
 cask "rectangle"
 cask "signal"
 cask "slack"
