--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -48891,7 +48891,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>MesloLGSNerdFontComplete-Regular 18</string>
+			<string>MesloLGS-NF-Regular 18</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
