remove dead symlinks

--- a/config.yaml
+++ b/config.yaml
@@ -165,3 +165,9 @@
     ~/.oh-my-zsh/custom/themes/:
       glob: true
       path: zsh/custom/themes/*
+
+# remove dead symlinks
+- clean:
+    - ~/.oh-my-zsh/custom
+    - ~/.oh-my-zsh/custom/plugins/
+    - ~/.oh-my-zsh/custom/themes/
