--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -2,6 +2,7 @@ tap "aws/tap"
 tap "buo/cask-upgrade"
 tap "derailed/k9s"
 tap "derailed/popeye"
+tap "fairwindsops/tap"
 tap "golangci/tap"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
@@ -13,25 +14,34 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "mas-cli/tap"
 tap "mongodb/brew"
+tap "sonatype-nexus-community/nancy-tap"
 tap "warrensbox/tap"
 brew "argyll-cms"
 brew "gdbm"
 brew "xz"
-brew "python@3.9"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
+brew "python@3.9"
 brew "awscli"
 brew "bash"
 brew "openjdk"
 brew "bfg"
+brew "glib"
 brew "coreutils"
+brew "libssh2"
 brew "openldap"
 brew "curl"
+brew "gobject-introspection"
+brew "harfbuzz"
+brew "ffmpeg"
+brew "figlet"
 brew "findutils"
+brew "frpc"
 brew "fzf"
 brew "gh"
 brew "git"
+brew "git-filter-repo"
 brew "git-lfs"
 brew "gnu-sed"
 brew "gnu-time"
@@ -42,22 +52,28 @@ brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
+brew "libheif"
 brew "imagemagick"
+brew "jinja2-cli"
 brew "john-jumbo"
 brew "jq"
+brew "k2tf"
 brew "kubernetes-cli"
 brew "krew"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
+brew "ldns"
 brew "nano"
 brew "ncdu"
 brew "neovim"
+brew "nghttp2"
 brew "node"
 brew "nvm"
 brew "octant"
 brew "openssh"
 brew "packer"
+brew "redis"
 brew "ripgrep"
 brew "rsync"
 brew "shellcheck"
@@ -72,32 +88,40 @@ brew "tmux"
 brew "transcrypt"
 brew "tree"
 brew "unar"
+brew "velero"
 brew "watch"
 brew "wget"
 brew "yarn"
+brew "youtube-dl"
 brew "yq"
 brew "zsh"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
+brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
 brew "hashicorp/tap/terraform-ls"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
+brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk"
 cask "atom"
 cask "aws-vpn-client"
 cask "bitwarden"
+cask "calibre"
 cask "cyberduck"
+cask "discord"
 cask "displaycal"
 cask "docker"
 cask "duet"
 cask "eloston-chromium"
+cask "exifcleaner"
 cask "firefox"
-cask "font-meslo-lg-nerd-font"
 cask "google-chrome"
+cask "google-chrome-beta"
 cask "google-cloud-sdk"
 cask "gpg-suite"
 cask "iina"
+cask "imageoptim"
 cask "insomnia"
 cask "iterm2"
 cask "joplin"
@@ -119,10 +143,12 @@ cask "ngrok"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "oversight"
+cask "plex"
 cask "prusaslicer"
 cask "rectangle"
 cask "signal"
 cask "slack"
+cask "teamviewer"
 cask "thunderbird"
 cask "visual-studio-code"
 cask "zoom"
