--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -14,6 +14,7 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "mas-cli/tap"
 tap "mongodb/brew"
+tap "norwoodj/tap"
 tap "sonatype-nexus-community/nancy-tap"
 tap "warrensbox/tap"
 brew "argyll-cms"
@@ -102,11 +103,13 @@ brew "golangci/tap/golangci-lint"
 brew "hashicorp/tap/terraform-ls"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
+brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk"
 cask "atom"
 cask "aws-vpn-client"
 cask "bitwarden"
+cask "browserosaurus"
 cask "calibre"
 cask "cyberduck"
 cask "discord"
@@ -116,6 +119,7 @@ cask "duet"
 cask "eloston-chromium"
 cask "exifcleaner"
 cask "firefox"
+cask "gimp"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-cloud-sdk"
@@ -139,16 +143,19 @@ cask "microsoft-remote-desktop"
 cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
+cask "mullvadvpn"
 cask "ngrok"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "oversight"
 cask "plex"
 cask "prusaslicer"
+cask "pycharm-ce"
 cask "rectangle"
 cask "signal"
 cask "slack"
 cask "teamviewer"
 cask "thunderbird"
 cask "visual-studio-code"
+cask "whatsapp"
 cask "zoom"
