--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -20,6 +20,7 @@ tap "warrensbox/tap"
 brew "argyll-cms"
 brew "gdbm"
 brew "xz"
+brew "python@3.10", link: true
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
@@ -31,8 +32,9 @@ brew "bfg"
 brew "glib"
 brew "coreutils"
 brew "libssh2"
-brew "openldap"
 brew "curl"
+brew "unbound"
+brew "gnutls"
 brew "gobject-introspection"
 brew "harfbuzz"
 brew "ffmpeg"
@@ -59,12 +61,13 @@ brew "jinja2-cli"
 brew "john-jumbo"
 brew "jq"
 brew "k2tf"
-brew "kubernetes-cli"
+brew "kubernetes-cli", link: false
 brew "krew"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
 brew "ldns"
+brew "luv"
 brew "nano"
 brew "ncdu"
 brew "neovim"
@@ -110,8 +113,6 @@ cask "atom"
 cask "aws-vpn-client"
 cask "bitwarden"
 cask "browserosaurus"
-cask "calibre"
-cask "cyberduck"
 cask "discord"
 cask "displaycal"
 cask "docker"
@@ -157,5 +158,4 @@ cask "slack"
 cask "teamviewer"
 cask "thunderbird"
 cask "visual-studio-code"
-cask "whatsapp"
 cask "zoom"
