--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -20,29 +20,35 @@ tap "warrensbox/tap"
 brew "argyll-cms"
 brew "gdbm"
 brew "xz"
-brew "python@3.10", link: true
+brew "python@3.10"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
-brew "python@3.9"
 brew "awscli"
 brew "bash"
 brew "openjdk"
 brew "bfg"
+brew "node"
+brew "bitwarden-cli"
 brew "glib"
+brew "python@3.9"
+brew "chart-testing"
 brew "coreutils"
 brew "libssh2"
 brew "curl"
+brew "dotnet"
 brew "unbound"
 brew "gnutls"
-brew "gobject-introspection"
 brew "harfbuzz"
+brew "gobject-introspection"
+brew "sdl2"
 brew "ffmpeg"
 brew "figlet"
 brew "findutils"
 brew "frpc"
 brew "fzf"
 brew "gh"
+brew "ghostscript"
 brew "git"
 brew "git-filter-repo"
 brew "git-lfs"
@@ -50,38 +56,50 @@ brew "gnu-sed"
 brew "gnu-time"
 brew "go"
 brew "grep"
+brew "grpcurl"
 brew "hadolint"
 brew "helm"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
+brew "shared-mime-info"
 brew "libheif"
+brew "libraw"
 brew "imagemagick"
 brew "jinja2-cli"
 brew "john-jumbo"
 brew "jq"
 brew "k2tf"
-brew "kubernetes-cli", link: false
+brew "ko"
+brew "kubernetes-cli"
 brew "krew"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
 brew "ldns"
+brew "libusb"
+brew "linkerd"
 brew "luv"
+brew "minikube"
+brew "node@16"
+brew "mongosh"
+brew "mtr"
 brew "nano"
 brew "ncdu"
 brew "neovim"
 brew "nghttp2"
-brew "node"
 brew "nvm"
 brew "octant"
 brew "openssh"
 brew "packer"
+brew "pnpm"
+brew "protobuf"
 brew "redis"
 brew "ripgrep"
 brew "rsync"
 brew "shellcheck"
 brew "socat"
+brew "spoof-mac"
 brew "telnet"
 brew "terraform-docs"
 brew "tfenv"
@@ -93,6 +111,7 @@ brew "transcrypt"
 brew "tree"
 brew "unar"
 brew "velero"
+brew "wakeonlan"
 brew "watch"
 brew "wget"
 brew "yarn"
@@ -110,8 +129,10 @@ brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "adoptopenjdk"
 cask "atom"
+cask "autodesk-fusion360"
 cask "aws-vpn-client"
 cask "bitwarden"
+cask "bloomrpc"
 cask "browserosaurus"
 cask "discord"
 cask "displaycal"
@@ -156,6 +177,8 @@ cask "rectangle"
 cask "signal"
 cask "slack"
 cask "teamviewer"
+cask "telegram"
 cask "thunderbird"
+cask "tor-browser"
 cask "visual-studio-code"
 cask "zoom"
