--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -31,7 +31,6 @@ brew "bfg"
 brew "node"
 brew "bitwarden-cli"
 brew "glib"
-brew "python@3.9"
 brew "chart-testing"
 brew "coreutils"
 brew "libssh2"
@@ -40,7 +39,6 @@ brew "dotnet"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
-brew "gobject-introspection"
 brew "sdl2"
 brew "ffmpeg"
 brew "figlet"
@@ -50,11 +48,13 @@ brew "fzf"
 brew "gh"
 brew "ghostscript"
 brew "git"
+brew "git-delete-merged-branches"
 brew "git-filter-repo"
 brew "git-lfs"
 brew "gnu-sed"
 brew "gnu-time"
 brew "go"
+brew "gobject-introspection"
 brew "grep"
 brew "grpcurl"
 brew "hadolint"
@@ -94,6 +94,7 @@ brew "openssh"
 brew "packer"
 brew "pnpm"
 brew "protobuf"
+brew "python@3.9"
 brew "redis"
 brew "ripgrep"
 brew "rsync"
@@ -127,10 +128,10 @@ brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
-cask "adoptopenjdk"
 cask "atom"
 cask "autodesk-fusion360"
 cask "aws-vpn-client"
+cask "balenaetcher"
 cask "bitwarden"
 cask "bloomrpc"
 cask "browserosaurus"
@@ -166,19 +167,20 @@ cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
 cask "mullvadvpn"
-cask "ngrok"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "oversight"
 cask "plex"
 cask "prusaslicer"
-cask "pycharm-ce"
 cask "rectangle"
 cask "signal"
 cask "slack"
+cask "spotify"
 cask "teamviewer"
 cask "telegram"
+cask "temurin"
 cask "thunderbird"
 cask "tor-browser"
+cask "viber"
 cask "visual-studio-code"
 cask "zoom"
