--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -31,6 +31,7 @@ brew "bfg"
 brew "node"
 brew "bitwarden-cli"
 brew "glib"
+brew "pyyaml"
 brew "chart-testing"
 brew "coreutils"
 brew "libssh2"
@@ -40,6 +41,7 @@ brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
 brew "sdl2"
+brew "srt"
 brew "ffmpeg"
 brew "figlet"
 brew "findutils"
@@ -77,6 +79,7 @@ brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
 brew "ldns"
+brew "libfido2"
 brew "libusb"
 brew "linkerd"
 brew "luv"
@@ -94,7 +97,7 @@ brew "openssh"
 brew "packer"
 brew "pnpm"
 brew "protobuf"
-brew "python@3.9"
+brew "pyenv"
 brew "redis"
 brew "ripgrep"
 brew "rsync"
@@ -128,6 +131,7 @@ brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
+cask "android-file-transfer"
 cask "atom"
 cask "autodesk-fusion360"
 cask "aws-vpn-client"
@@ -142,10 +146,12 @@ cask "duet"
 cask "eloston-chromium"
 cask "exifcleaner"
 cask "firefox"
+cask "focusrite-control"
 cask "gimp"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-cloud-sdk"
+cask "google-drive"
 cask "gpg-suite"
 cask "iina"
 cask "imageoptim"
@@ -173,6 +179,8 @@ cask "oversight"
 cask "plex"
 cask "prusaslicer"
 cask "rectangle"
+cask "redisinsight"
+cask "sanesidebuttons"
 cask "signal"
 cask "slack"
 cask "spotify"
@@ -184,3 +192,8 @@ cask "tor-browser"
 cask "viber"
 cask "visual-studio-code"
 cask "zoom"
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "Keynote", id: 409183694
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
