--- a/k8s/k9s.yaml
+++ b/k8s/k9s.yaml
@@ -15,8 +15,8 @@ k9s:
     fullScreenLogs: false
     textWrap: false
     showTime: false
-  currentContext: ops-shared-eks
-  currentCluster: arn:aws:eks:us-east-2:022761819571:cluster/ops-shared-eks
+  currentContext: ap3-prod-eks
+  currentCluster: arn:aws:eks:us-east-2:409414527402:cluster/ap3-prod-eks
   clusters:
     "":
       namespace:
@@ -66,9 +66,10 @@ k9s:
       portForwardAddress: localhost
     arn:aws:eks:ap-southeast-2:601446024623:cluster/ap3-stg-eks:
       namespace:
-        active: all
+        active: ap3-stg-master
         lockFavorites: false
         favorites:
+        - linkerd-viz
         - filebeat
         - ap2-stg-master
         - ap3-stg-ortto-website-ui-preview
@@ -77,9 +78,8 @@ k9s:
         - all
         - ap3-stg-master
         - loki
-        - mongodb-exporter
       view:
-        active: prometheusrule
+        active: pods
       featureGates:
         nodeShell: false
       shellPod:
@@ -117,20 +117,20 @@ k9s:
       portForwardAddress: localhost
     arn:aws:eks:us-east-2:022761819571:cluster/ops-shared-eks:
       namespace:
-        active: kube-system
+        active: antora
         lockFavorites: false
         favorites:
+        - grafana
+        - ap3-application-logs
+        - linkerd-viz
         - kube-system
         - prometheus-operator
         - es-watcher-exporter
         - antora
         - external-dns
         - ingress-nginx
-        - anchore-engine
-        - loki
-        - all
       view:
-        active: pods
+        active: sec
       featureGates:
         nodeShell: false
       shellPod:
@@ -144,7 +144,7 @@ k9s:
       portForwardAddress: localhost
     arn:aws:eks:us-east-2:409414527402:cluster/ap3-prod-eks:
       namespace:
-        active: ap3-prod-master
+        active: all
         lockFavorites: false
         favorites:
         - ap3-prod-master
@@ -157,7 +157,7 @@ k9s:
         - ap3-prod-capture-api-cname-proxy
         - ap2-prod-master
       view:
-        active: dp
+        active: job
       featureGates:
         nodeShell: false
       shellPod:
